# diffusion_course

./: README.md  main.py  pyproject.toml
1.introduction_to_diffusion_models/: introduction_to_diffusers.ipynb
1.introduction_to_diffusion_models/my_pipeline/: model_index.json
1.introduction_to_diffusion_models/my_pipeline/scheduler/: scheduler_config.json
1.introduction_to_diffusion_models/my_pipeline/unet/: config.json
