[project]
name = "diffusion-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=2.16.1",
    "diffusers>=0.35.1",
    "ftfy>=6.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "peft>=0.17.1",
    "pyarrow==9.0.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
